multi-line titles in description cards